
 * New decrypt flag to skip the actual decryption so that information
   about the recipients can be retrieved.

 * If the key passed to gpgme_signers_add was retrieved with an exact
   pattern (fingerprint with '!' suffix), the requested subkey is used
   for signing.  This reflects the behaviour of gpg but is a minor
   semantic change.  [T3325]

 * Removed the gpgme_attr_t enums and their functions which were
   deprecated since 2003.  [rMd54d6eaa64]

 * Removed the never implemented or announced GPGME_EXPORT_MODE_NOUID
   flags.  [rMd54d6eaa64]

 * Removed the entire trustlist feature which worked anyway only for a
   short period in 2003.  [T4834]

 * Interface changes relative to the 1.24 branch:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 gpgme_op_random_bytes                   NEW.
 gpgme_op_random_value                   NEW.
 GPGME_RANDOM_MODE_NORMAL                NEW.
 GPGME_RANDOM_MODE_ZBASE32               NEW.
 GPGME_DECRYPT_LISTONLY                  NEW.
 gpgme_subkey_t                          EXT: New field 'subkey_match'.
 gpgme_attr_t                            REMOVED.
 gpgme_get_sig_ulong_attr                REMOVED.
 gpgme_get_sig_string_attr               REMOVED.
 gpgme_key_get_string_attr               REMOVED.
 gpgme_key_get_ulong_attr                REMOVED.
 gpgme_key_sig_get_string_attr           REMOVED.
 gpgme_key_sig_get_ulong_attr            REMOVED.
 gpgme_trust_item_get_string_attr        REMOVED.
 gpgme_trust_item_get_int_attr           REMOVED.
 GPGME_EXPORT_MODE_NOUID                 REMOVED.
 GPGME_EVENT_NEXT_TRUSTITEM              REMOVED.
 gpgme_trust_item_t                      REMOVED.
 GpgmeTrustItem                          REMOVED.
 gpgme_op_trustlist_start                REMOVED.
 gpgme_op_trustlist_next                 REMOVED.
 gpgme_op_trustlist_end                  REMOVED.
 gpgme_trust_item_ref                    REMOVED.
 gpgme_trust_item_unref                  REMOVED.